Bug 1618312 - [css-grid] Use the outermost frame to check the computed `position` value since we don't inherit that to anonymous frames.  r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D64851